--- a/css/style.css
+++ b/css/style.css
@@ -1382,7 +1382,7 @@ background-image: url("../img/checkbox-on.png");
   position: absolute;
   bottom: 0px;
   width: 236px;
-  height: 231px;
+  min-height: 231px;
   background-color: #eeeeee;
   display: none;
   text-align: center;
@@ -1394,12 +1394,12 @@ background-image: url("../img/checkbox-on.png");
   display: block;
 }
 
-.gallery-project-item h3 {
+/*.gallery-project-item h3 {
   color: #000000;
   font-size: 18px;
   line-height: 30px;
   text-transform: uppercase;
-}
+}*/
 
 .gallery-project-item p {
   font-size: 16px;
@@ -1408,7 +1408,7 @@ background-image: url("../img/checkbox-on.png");
   margin-bottom: 40px;
 }
 
-.gallery-project-item a {
+.gallery-project-item .active-catalog {
   text-transform: uppercase;
   font-size: 16px;
   line-height: 18px;
@@ -1421,6 +1421,24 @@ background-image: url("../img/checkbox-on.png");
   position: absolute;
   bottom: 45px;
   left: 80px;
+}
+
+.gallery-project-item .name-site {
+  font-family: "Roboto", Arial, sans-serif;
+  color: #000000;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.gallery-project-item .name-site:hover {
+  color: #fb565a;
+}
+
+.gallery-project-item .name-site:active {
+  color: #000000;
+  opacity: 0.3;
 }
 
 .active-catalog:hover {
