--- a/css/style.css
+++ b/css/style.css
@@ -280,13 +280,20 @@ a {
   padding-right: 20px;
   margin: 0 auto;
   margin-bottom: 29px;
-  padding-bottom: 95px;
+  /*padding-bottom: 95px;
   display: flex;
   justify-content: left;
-  border-bottom: 2px solid transparent;
+  border-bottom: 2px solid transparent;*/
 }
 
-.services::after {
+.servises-container {
+  display: flex;
+  justify-content: left;
+  border-bottom: 2px solid #eeeeee;
+  padding-bottom: 95px;
+}
+
+/*.services::after {
   content: "";
   position: absolute;
   width: 1160px;
@@ -295,7 +302,7 @@ a {
   background-repeat: no-repeat;
   top: 427px;
   left: 20px;
-}
+}*/
 
 .services-item {
   margin-right: 100px;
