--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ a {
 }
 
 .slider {
+  position: relative;
   width: 1160px;
   margin: 0 auto;
   min-height: 426px;
@@ -233,8 +234,8 @@ a {
 
 .slider-controls {
   position: absolute;
-  top: 435px;
-  left: 640px;
+  top: 318px;
+  left: 565px;
   height: 18px;
   z-index: 100;
   font-size: 0;
@@ -280,10 +281,6 @@ a {
   padding-right: 20px;
   margin: 0 auto;
   margin-bottom: 29px;
-  /*padding-bottom: 95px;
-  display: flex;
-  justify-content: left;
-  border-bottom: 2px solid transparent;*/
 }
 
 .servises-container {
@@ -292,17 +289,6 @@ a {
   border-bottom: 2px solid #eeeeee;
   padding-bottom: 95px;
 }
-
-/*.services::after {
-  content: "";
-  position: absolute;
-  width: 1160px;
-  height: 2px;
-  background-image: url("../img/line.png");
-  background-repeat: no-repeat;
-  top: 427px;
-  left: 20px;
-}*/
 
 .services-item {
   margin-right: 100px;
