--- a/css/style.css
+++ b/css/style.css
@@ -210,14 +210,16 @@ a {
   display: block;
   text-transform: uppercase;
   background-color: #fb565a;
-  padding: 16px 57px 16px 52px;
-  width: 131px;
-  min-height: 13px;
+  padding-left: 52px;
+  padding-top: 0px;
+  width: 189px;
+  text-align: left;
+  vertical-align: middle;
   color: #ffffff;
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
-  line-height: 18px;
+  line-height: 49px;
   text-decoration: none;
   border-radius: 3px;
   cursor: pointer;
