--- a/css/style.css
+++ b/css/style.css
@@ -622,11 +622,11 @@ a {
   font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
-  line-height: 18px;
-  padding-top: 18px;
-  padding-left: 45px;
-  padding-right: 45px;
-  padding-bottom: 17px;
+  line-height: 48px;
+  padding-right: 2px;
+  padding-top: 2px;
+  text-align: center;
+  vertical-align: middle;
   background-color: #fb565a;
   color: #ffffff;
   border-radius: 2px;
@@ -933,10 +933,9 @@ a {
 
 .title-shop {
   font-family: "Roboto", Arial, sans-serif;
-  width: 1160px;
+  width: 100%;
   margin: 0 auto;
-  padding-left: 268px;
-  padding-right: 20px;
+  text-align: center;
   padding-top: 20px;
   padding-bottom: 55px;
   background-color: #eeeeee;
